photon milestone